src/objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Issued_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Issued By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Account</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_PO_Amount__c</fullName>
        <label>Total PO Amount</label>
        <summarizedField>Purchase_Order_Items__c.Amount__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Items__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>